--- a/Practical_09/part_4/integrationsx32/Makefile
+++ b/Practical_09/part_4/integrationsx32/Makefile
@@ -2,8 +2,9 @@ EXECUTABLE=IntegratingCandASM
 
 all:
 	nasm -f elf add.asm -o add.o -l starter.lst
+	nasm -f elf sub.asm -o sub.o -l starter2.lst
 	gcc -m32 -c main.c
-	gcc -m32 main.o add.o -o $(EXECUTABLE)
+	gcc -m32 main.o add.o sub.o  -o $(EXECUTABLE)
 	./$(EXECUTABLE)
 
 #Clean folder
